--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://myeongjae-kim.github.io/quartz/"
+baseURL = "https://myeongjae.wiki/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
