--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-
+      - script:
+        name: Set git config core.quotePath to false for emoji filenames
+        code: git config --global core.quotePath false
       - name: Build Link Index
         uses: jackyzha0/hugo-obsidian@v2.20
         with:
