--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,10 +12,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-      - name: Set git config core.quotePath to false for emoji filenames # https://github.com/gohugoio/hugo/issues/3071#issuecomment-281347249
-        shell: bash
-        run: |
-          git config --global core.quotePath false
+
       - name: Build Link Index
         uses: jackyzha0/hugo-obsidian@v2.20
         with:
@@ -30,8 +27,8 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
-      - name: Build
-        run: hugo --minify
+      - name: Build # https://github.com/gohugoio/hugo/issues/3071#issuecomment-281347249
+        run: git config --global core.quotePath false && hugo --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
