--- a/data/config.yaml
+++ b/data/config.yaml
@@ -20,7 +20,7 @@ search:
 description:
   메모 저장소에 오신것을 환영합니다.
 page_title:
-  "🪴 김명재 (Myeongjae Kim)"
+  "🪴 김명재"
 links:
   - link_name: Blog
     link: https://myeongjae.kim
